Fix overlapping problem with floating buttons

--- a/app/assets/stylesheets/talks.scss
+++ b/app/assets/stylesheets/talks.scss
@@ -85,11 +85,11 @@
   @include button(#aaa, #555);
 
   float: right;
-  margin-top: -40px;
+  margin-top: 5px;
   width: 150px;
   height: 30px;
 
   &:active {
-    margin-top: -39px;
+    margin-top: 6px;
   }
 }
