--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -8,8 +8,8 @@
   @include button(#9c9, #0b0);
 
   float: right;
-  margin-top: -40px;
-  width: 150px;
+  margin-top: 5px;
+  // width: 150px;
   color: #040;
 
   &:hover {
@@ -17,7 +17,7 @@
   }
 
   &:active {
-    margin-top: -39px;
+    margin-top: 6px;
   }
 }
 
